myalpine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myalpine-deployment
  namespace: test-argo
spec:
  selector:
    matchlabels:
      app: myalpine
    replicas: 2
    template:
      metadata:
        labels:
          app: myalpine
      spec:
        containers:
        - name: myhttp
          image: raj/myalpine-image:0.1
